SystemUI: Add USB Tether QS tile
Author: BestPig <bestpig82@gmail.com>
Date:   Sun Feb 1 03:04:41 2015 +0100

    SystemUI: add USB Tether tile

     * Added vector drawables (blunden)

     * Long click action changed to open Tethering options, in the same way
       as Google does for Hotspot tile (bgcngm)

     * USB Tethering enablement check refactored (bgcngm and luca020400)

    Change-Id: Ic44f2b596fe32152f3f722347a855325c52113c6

Author: Gabriele M <moto.falcon.git@gmail.com>
Date:   Fri Apr 27 20:51:42 2018 +0200

    SystemUI: Toggle USB tethering only when USB is connected

    Pressing the tile when unplugged causes USB tethering to turn on
    as soon as the cable is connected. This can happen long after the
    tile has been pressed, so don't do anything if unplugged.

    Change-Id: Ib8bbdc758097ca7af5d4e7c3483c28ba42fb9ce1

Change-Id: Ibbc0ba9de2cc3eee2a7f6a9c9f005730244f0b3a

--- a/packages/SystemUI/res/values/derp_strings.xml
+++ b/packages/SystemUI/res/values/derp_strings.xml
@@ -80,4 +80,7 @@
      <!-- Biometric Dialog - Use Face -->
     <string name="biometric_dialog_button_use_face">Use Face</string>
 
+    <!-- USB tethering QS tile -->
+    <string name="quick_settings_usb_tether_label">USB tethering</string>
+
 </resources>
