--- a/core/res/res/values/derp_config.xml
+++ b/core/res/res/values/derp_config.xml
@@ -241,4 +241,8 @@
 
     <!-- Whether doze feature is enabled by default in settings -->
     <bool name="config_dozeDefaultEnabled">true</bool>
+
+    <!-- Whether to enable OnePlus Camera hack -->
+    <bool name="config_enableOnePlusCameraHack">false</bool>
+
 </resources>
