--- a/core/res/res/values/derp_symbols.xml
+++ b/core/res/res/values/derp_symbols.xml
@@ -213,4 +213,8 @@
 
     <!-- Whether doze feature is enabled by default in settings -->
     <java-symbol type="bool" name="config_dozeDefaultEnabled" />
+
+    <!-- Whether to enable OnePlus Camera hack -->
+    <java-symbol type="bool" name="config_enableOnePlusCameraHack" />
+
 </resources>
