--- a/packages/SystemUI/res/values/derp_dimens.xml
+++ b/packages/SystemUI/res/values/derp_dimens.xml
@@ -41,4 +41,7 @@
     <dimen name="opa_rest_to_collapse">7.0dip</dimen>
 
     <dimen name="screenrecord_dot_size">48dp</dimen>
+
+    <!-- Width of the battery icon in the status bar when set to circle style. -->
+    <dimen name="status_bar_battery_icon_circle_width">13.5dp</dimen>
 </resources>
