--- a/core/res/res/values/derp_symbols.xml
+++ b/core/res/res/values/derp_symbols.xml
@@ -75,4 +75,13 @@
 
     <!-- Enable face auth only when swiping security view -->
     <java-symbol type="bool" name="config_faceAuthOnlyOnSecurityView" />
+
+    <!-- Private symbols that we need to reference from framework code.  See
+         frameworks/base/core/res/MakeJavaSymbols.sed for how to easily generate
+         this.
+
+         Can be referenced in java code as: com.android.internal.R.<type>.<name>
+         and in layout xml as: "@*android:<type>/<name>"
+    -->
+    <java-symbol type="array" name="config_customPermissionsList" />
 </resources>
