Battery percentage/Net monitor: Fix cut off issue in keyguard
Test:
1. Enable battery percent for the statusbar battery
2. Enable traffic indicators and set threshold to 0
3. Go to the keyguard and check the statusbar

Change-Id: I83ad1b01bcb3274084f6c6510be80626c9758228
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/packages/SystemUI/res/values/derp_dimens.xml
+++ b/packages/SystemUI/res/values/derp_dimens.xml
@@ -17,4 +17,7 @@
 -->
 <resources>
 
+    <!-- Padding after battery level text in status bar, QS, and Keyguard -->
+    <dimen name="battery_level_padding_end">2dp</dimen>
+
 </resources>
