SystemUI: Allow listening for face only on pin/pass view
Useful for devices with popup camera

Change-Id: Ifba770dd1681858844d5d0290cbf385bfa47f841

--- a/core/res/res/values/derp_config.xml
+++ b/core/res/res/values/derp_config.xml
@@ -65,7 +65,10 @@
     <bool name="config_hasVoocCharger">false</bool>
 	
     <!-- The list of vendor package signatures that should also be considered
-          platform signatures, specifically for use on devices with a vendor partition. -->
+         platform signatures, specifically for use on devices with a vendor partition. -->
     <string-array name="config_vendorPlatformSignatures">
     </string-array>
+
+    <!-- Enable face auth only when swiping security view -->
+    <bool name="config_faceAuthOnlyOnSecurityView">false</bool>
 </resources>
