--- a/packages/SystemUI/res/values/derp_dimens.xml
+++ b/packages/SystemUI/res/values/derp_dimens.xml
@@ -45,4 +45,6 @@
 
     <!-- Width of the battery icon in the status bar when set to circle style. -->
     <dimen name="status_bar_battery_icon_circle_width">13.5dp</dimen>
+
+    <dimen name="keyguard_security_fod_view_margin">140dp</dimen>
 </resources>
