--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -105,4 +105,8 @@
 
     <string name="quick_settings_sound_search">Musikerkennung</string>
 
+    <string name="quick_settings_monotoggle_tile">Audio-Modus</string>
+    <string name="quick_settings_monotoggle_tile_mono">Mono-Audio</string>
+    <string name="quick_settings_monotoggle_tile_stereo">Stereo-Audio</string>
+
 </resources>
