--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -88,4 +88,8 @@
     <string name="quick_settings_sound_vibrate">Vibrieren</string>
     <string name="quick_settings_sound_dnd">Nicht stören</string>
 
+    <!-- Partial screenshot -->
+    <string name="global_screenshot_selector_capture_description">Teil-Screenshot aufnehmen</string>
+    <string name="global_screenshot_selector_cancel_description">Teil-Screenshot abbrechen</string>
+
 </resources>
