--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -96,4 +96,7 @@
     <string name="quick_settings_screenshot_label">Screenshot</string>
     <string name="quick_settings_region_screenshot_label">Teil-Screenshot</string>
 
+    <string name="screenrecord_stopdot_label">Stopppunkt anzeigen\nLang drücken, um es zu bewegen</string>
+    <string name="screenrecord_lowquality_label">Geringere Qualität für kleinere Dateien</string>
+
 </resources>
