--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -113,4 +113,8 @@
     <string name="task_helper_app_killed">%1$s gewalthaft gestoppt</string>
     <string name="empty_app_killed">App</string>
 
+    <!-- App picker manifest entry -->
+    <string name="app_picker_dialog_title">App auswählen</string>
+    <string name="app_picker_activity_select_title">Aktion wählen</string>
+
 </resources>
