--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -62,4 +62,16 @@
     <string name="global_action_restart_bootloader">Bootloader</string>
     <string name="global_action_restart_ui">System UI</string>
 
+    <!-- Indication on the keyguard that is shown when the device is charging with a Dash charger. Should match keyguard_plugged_in_dash_charging [CHAR LIMIT=40]-->
+    <string name="keyguard_indication_dash_charging_time"><xliff:g id="percentage">%2$s</xliff:g> • Dash-Laden (<xliff:g id="charging_time_left" example="4 hours and 2 minutes">%1$s</xliff:g> bis voll aufgeladen)</string>
+    <string name="keyguard_plugged_in_dash_charging"><xliff:g id="percentage">%s</xliff:g> • Dash-Laden</string>
+
+    <!-- Indication on the keyguard that is shown when the device is charging with a Warp charger. Should match keyguard_plugged_in_warp_charging [CHAR LIMIT=40]-->
+    <string name="keyguard_indication_warp_charging_time"><xliff:g id="percentage">%2$s</xliff:g> • Warp-Laden (<xliff:g id="charging_time_left" example="4 hours and 2 minutes">%1$s</xliff:g> bis voll aufgeladen)</string>
+    <string name="keyguard_plugged_in_warp_charging"><xliff:g id="percentage">%s</xliff:g> • Warp-Laden</string>
+
+    <!-- Indication on the keyguard that is shown when the device is charging with a VOOC charger. Should match keyguard_plugged_in_vooc_charging [CHAR LIMIT=40]-->
+    <string name="keyguard_indication_vooc_charging_time"><xliff:g id="percentage">%2$s</xliff:g> • VOOC-Laden (<xliff:g id="charging_time_left" example="4 hours and 2 minutes">%1$s</xliff:g> bis voll aufgeladen)</string>
+    <string name="keyguard_plugged_in_vooc_charging"><xliff:g id="percentage">%s</xliff:g> • VOOC-Laden</string>
+
 </resources>
