--- a/packages/SystemUI/res-keyguard/layout/divided_lines_clock.xml
+++ b/packages/SystemUI/res-keyguard/layout/divided_lines_clock.xml
@@ -35,8 +35,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_horizontal"
-                android:format12Hour="EEE, MMM d"
-                android:format24Hour="EEE, MMM d"
+                android:format12Hour="EEEE, MMM d"
+                android:format24Hour="EEEE, MMM d"
                 android:textColor="?attr/wallpaperTextColor"
                 android:theme="@style/TextAppearance.Keyguard"
                 android:fontFamily="@*android:string/config_bodyFontFamily"
@@ -52,10 +52,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-		android:gravity="center_horizontal"
-		android:format12Hour="hh:mm"
-		android:format24Hour="kk:mm"    
-		android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:format12Hour="hh:mm"
+                android:format24Hour="kk:mm"
+                android:layout_weight="1"
                 android:paddingTop="15dp"
                 android:paddingBottom="15dp"
                 style="@style/widget_big"
