--- a/packages/SystemUI/res-keyguard/layout/divided_lines_preview.xml
+++ b/packages/SystemUI/res-keyguard/layout/divided_lines_preview.xml
@@ -24,8 +24,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_above="@id/clock"
         android:gravity="center_horizontal"
-        android:format12Hour="EEE, MMM d"
-        android:format24Hour="EEE, MMM d"
+        android:format12Hour="EEEE, MMM d"
+        android:format24Hour="EEEE, MMM d"
         android:textColor="?attr/wallpaperTextColor"
         android:theme="@style/TextAppearance.Keyguard"
         android:fontFamily="@*android:string/config_bodyFontFamily"
